--- a/auth/alembic.ini
+++ b/auth/alembic.ini
@@ -55,7 +55,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql://root:newcicle23@127.0.0.1/gs_user_data
+sqlalchemy.url = mysql://root:1234@127.0.0.1/gs_user_data_local
 
 
 [post_write_hooks]
